# autoMarkup

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  example.cpp  main.cpp  run_example.bash  tests.cpp
autoMarkup/: CMakeLists.txt  dataStructs.hpp  main.cpp
autoMarkup/DataHub/: DataHub.cpp  DataHub.hpp  DataHubErrors.hpp
autoMarkup/DataHub/include/: DataHub.hpp
autoMarkup/DictHandler/: DictHandler.cpp  DictHandler.hpp  DictHandlerErrors.hpp  README.md
autoMarkup/Markup/: CosCounter.cpp  CosCounter.hpp  Markup.cpp  Markup.hpp  SequentialMarkup.cpp  Types.hpp
autoMarkup/Tokenizer/: Tokenizer.cpp  Tokenizer.hpp
autoMarkup/Tokenizer/Tokenizer_tests/: CMakeLists.txt  Tokenizer_tests.cpp
autoMarkup/Tokenizer/include/: Tokenizer.hpp
autoMarkup/Tokenizer/src/: Tokenizer.cpp
autoMarkup/include/: dataStructs.hpp
autoMarkup/lemmatization/: CMakeLists.txt  filemanager.cpp  filemanager.hpp  main.cpp  traincontroller.cpp  traincontroller.hpp  traindataparser.cpp  traindataparser.hpp  utf8.hpp  wordnet.cpp  wordnet.hpp
autoMarkup/lemmatization/include/: traincontroller.hpp
autoMarkup/lemmatization/src/: filemanager.cpp  traincontroller.cpp
autoMarkup/lemmatization/utf8/: checked.hpp  core.hpp  unchecked.hpp
data/: Lemmadict.txt  sents.txt  tokens.txt
data/tests/: dict.txt
data/tests2/: text_dif_1.txt  text_dif_2.txt  text_neutral_1.txt  text_neutral_2.txt  text_sim_1.txt  text_sim_2.txt
inc/baker/: baker.hpp
inc/common/: exceptions.hpp  not_implemented_exception.hpp  types.hpp
inc/controller/: controller.hpp
inc/datahub/: DataHub.hpp  DataHubBuilder.hpp
inc/datasetcreator/: datasetcreator.hpp
inc/datastructs/: dataStructs.hpp
inc/dict_handler/: dict_handler.hpp  hashTable.hpp  model.hpp
inc/lemmatization/: filemanager.hpp  lemmatization.hpp  traincontroller.hpp  traindataparser.hpp  wordnet.hpp
inc/markup/: abstract_markup_factory.hpp  concurrent_markup.hpp  cos_vectorized_words_comparator.hpp  cos_words_comparator.hpp  fast_markup.hpp  markup.hpp  markup_factory.hpp  sentence_convolution.h  sentence_convolution.hpp  sentence_sum_convolution.hpp  sequential_markup.hpp  types.hpp  vectorized_words_comparator.hpp  words_comparator.hpp
inc/tokenizer/: Tokenizer.hpp
lemmatization/: wordnet.hpp
src/: CMakeLists.txt  main.cpp
src/baker/: baker.cpp
src/common/: CMakeLists.txt
src/controller/: controller.cpp
src/datahub/: DataHub.cpp  DataHubBuilder.cpp
src/datasetcreator/: datasetcreator.cpp
src/datastructs/: dataStructs.cpp
src/dict_handler/: dict_handler.cpp
src/lemmatization/: filemanager.cpp  lemmatization.cpp  traincontroller.cpp  traindataparser.cpp  wordnet.cpp
src/markup/: CMakeLists.txt  cos_vectorized_words_comparator.cpp  cos_words_comparator.cpp  markup.cpp  markup_factory.cpp  sentence_sum_convolution.cpp  sequential_markup.cpp
src/tokenizer/: Tokenizer.cpp
test/: CMakeLists.txt
test/datasetcreator/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  creator_test  datasetcreatorTest.cpp
test/markup/: CMakeLists.txt  main.cpp  test_cos_vectorized_words_comparator.hpp  test_cos_words_comparator.hpp  test_markup.cpp  test_markup.hpp  test_markup_factory.hpp  test_sentence_sum_convolution.hpp
test/tokenizer/: CMakeLists.txt  Tokenizer_tests.cpp
tests/: CMakeLists.txt  Makefile  run_tests.bash  tests.cpp
tests/DataHub/: DataHubTests.cpp  DataHubTests.hpp
tests/DictHandler/: DictHandlerTests.hpp
tests/Markup/: MakupTests.cpp  MakupTests.hpp
tests/Tokenizer/: TokenizerTests.cpp  TokenizerTests.hpp
tests/Tokenizer_tests/: CMakeLists.txt  Tokenizer_tests.cpp  test_text.txt
tests/test_DataHub/: test_DataHub.hpp
tests/test_DictHandler/: test_DictHandler.hpp
w2vPrepare/: format.py  install.sh  train.py
